Änderung der Satzung durch die MV 2020.2

--- a/src/satzung.tex
+++ b/src/satzung.tex
@@ -168,7 +168,7 @@
 
 \begin{para}{Einberufung der Mitgliederversammlung}
   \label{p:mveinberufung}
-  \item Mindestens einmal im Geschäftsjahr soll eine ordentliche Mitgliederversammlung stattfinden. Sie wird vom Vorstand unter Einhaltung einer Frist von zwei Wochen schriftlich unter Angabe der geplanten Tagesordnung einberufen.
+  \item Mindestens einmal im Geschäftsjahr soll eine ordentliche Mitgliederversammlung stattfinden. Sie wird vom Vorstand unter Einhaltung einer Frist von zwei Wochen per Textform unter Angabe der geplanten Tagesordnung einberufen.
   \item Das Einladungsschreiben gilt dem Mitglied als zugegangen, wenn es an die letzte vom Mitglied dem Verein bekannt gegebene E-Mail-Adresse gerichtet ist.
   \item Die Tagesordnung kann durch Mehrheitsbeschluss der Mitgliederversammlung in der Sitzung geändert oder auf Antrag eines einzelnen Mitglieds vor Beginn der Mitgliederversammlung ergänzt werden.
   \item Anträge zur Satzungsänderung sind mit einer Frist von einer Woche vor der Mitgliederversammlung an den Vorstand zu stellen.
@@ -202,7 +202,7 @@
   \item Der Vorstand kann jederzeit eine außerordentliche Mitgliederversammlung einberufen. Diese muss einberufen werden, wenn
   \begin{subpara}
     \item das Interesse des Vereins es erfordert oder wenn
-    \item diese von einem Drittel aller stimmberechtigten Mitglieder schriftlich unter Angabe des Zwecks und der Gründe verlangt wird.
+    \item diese von einem Fünftel aller Mitglieder schriftlich unter Angabe des Zwecks und der Gründe verlangt wird.
     Für die außerordentliche Mitgliederversammlung gelten die \parasref{p:mv}, \ref{p:mveinberufung} und \ref{p:mvbeschlussfassung} entsprechend.
   \end{subpara}
 \end{para}
@@ -234,7 +234,8 @@
 \item Diese Satzung wurde am 11.10.2015 verändert.
 \item Diese Satzung wurde am 23.04.2017 verändert.
 \item Diese Satzung wurde am 16.08.2017 verändert.
-\item Diese Satzung wurde am 02.03.2019 beschlossen.
+\item Diese Satzung wurde am 02.03.2019 verändert.
+\item Diese Satzung wurde am 16.09.2019 beschlossen.
 \end{changes}
 
 \end{document}
