--- a/src/satzung.tex
+++ b/src/satzung.tex
@@ -11,7 +11,7 @@
 % Set information for title page
 
 \title{ Satzung \\ RPG Librarium Aachen e.V.}
-\date{02. März 2019}
+\date{19. September 2019}
 %%%
 
 \begin{document}
@@ -235,7 +235,7 @@
 \item Diese Satzung wurde am 23.04.2017 verändert.
 \item Diese Satzung wurde am 16.08.2017 verändert.
 \item Diese Satzung wurde am 02.03.2019 verändert.
-\item Diese Satzung wurde am 16.09.2019 beschlossen.
+\item Diese Satzung wurde am 16.09.2019 beschlossen.ls
 \end{changes}
 
 \end{document}
