--- a/src/satzung.tex
+++ b/src/satzung.tex
@@ -235,7 +235,7 @@
 \item Diese Satzung wurde am 23.04.2017 verändert.
 \item Diese Satzung wurde am 16.08.2017 verändert.
 \item Diese Satzung wurde am 02.03.2019 verändert.
-\item Diese Satzung wurde am 16.09.2019 beschlossen.ls
+\item Diese Satzung wurde am 16.09.2019 beschlossen.
 \end{changes}
 
 \end{document}
